[tool.poetry]
name = "pokeapi"
version = "0.1.0"
description = "pokeapi."
authors = ["kohdice <kohdice@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
strawberry-graphql = {extras = ["fastapi"], version = "^0.219.1"}
sqlalchemy = "^2.0.25"
pymysql = "^1.1.0"
alembic = "^1.13.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
flake8-isort = "^6.1.1"
flake8-bugbear = "^24.1.17"
flake8-builtins = "^2.2.0"
flake8-pytest-style = "^1.7.2"
pep8-naming = "^0.13.3"
mypy = "^1.8.0"
black = "^24.1.1"
isort = "^5.13.2"
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
taskipy = "^1.12.2"
debugpy = "^1.8.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "tests/*",
    ".venv/*",
]

[tool.taskipy.tasks]
test = "pytest -s -vv --cov=. --cov-branch --cov-report=html"
fmt = "task fmt-black && task fmt-isort"
fmt-black = "black pokeapi tests"
fmt-isort = "isort pokeapi tests"
lint = "task lint-black && task lint-flake8 && task lint-mypy"
lint-flake8 = "flake8 pokeapi tests"
lint-mypy = "mypy pokeapi tests"
lint-black = "black --check pokeapi tests"
